# rust-ios-poc

./: README.md
Shared/: ContentView.swift  Poc-Bridging-Header.h  Rust.swift  RustGreetings.swift  rust_pocApp.swift
Tests iOS/: Tests_iOS.swift
Tests macOS/: Tests_macOS.swift
rust/: Cargo.toml
rust-poc.xcodeproj/: project.pbxproj
rust-poc.xcodeproj/project.xcworkspace/xcuserdata/felipejfc.xcuserdatad/: UserInterfaceState.xcuserstate
rust-poc.xcodeproj/xcshareddata/xcschemes/: rust-poc (iOS).xcscheme
rust-poc.xcodeproj/xcuserdata/felipejfc.xcuserdatad/xcschemes/: xcschememanagement.plist
rust/src/: lib.rs  rust.h
