[package]
name = "poc_rust"
version = "0.1.0"
authors = ["Felipe Cavalcanti <fjfcavalcanti@gmail.com>"]
edition = "2018"

[lib]
name = "greetings"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.3", features = ["blocking"]}

[profile.release]
opt-level = 'z'
lto = true
codegen-units = 1
panic = 'abort'
